Add blue to tab group option.

--- a/src/scss/components/_tabgroup.scss
+++ b/src/scss/components/_tabgroup.scss
@@ -96,6 +96,11 @@
         border-color: $color_supply;
       }
 
+      &--blue {
+        color: $color_blue_3;
+        border-color: $color_blue_3; 
+      }
+
       &--purple {
         color: $color_borrow;
         border-color: $color_borrow;
