--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -195,6 +195,11 @@
       background-image: url(/compound-components/assets/icn-wallet-connect.svg);
       margin: 0;
     }
+
+    &--blockwallet {
+      background-image: url(/compound-components/assets/icn-blockwallet.svg);
+      margin: 0;
+    }
   }
 
   .connect-choices {
