Align modal text

--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -104,7 +104,9 @@
       h3 {
         margin-bottom: 0;
       }
-    }
+
+      p {text-align: center;}
+      }
 
     &__back-arrow-holder {
       width: 100%;
