add Ethereum and Avalanche icons

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -126,4 +126,12 @@
   &--metamask {
     background-image: url('/compound-components/assets/icn-metamask.svg');
   }
+
+  &--ETHEREUM {
+    background-image: url('/compound-components/assets/icn-network-ethereum.svg');
+  }
+
+  &--AVALANCHE {
+    background-image: url('/compound-components/assets/icn-network-avalanche.svg');
+  }
 }
