more arb updates. if this doesn't work, try changing provider to flat url instead?

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -40,6 +40,7 @@ $border_radius: 3px;
 
 $color_kovan: #6C58F6;
 $color_rinkeby: #EEC55C;
+$color_arbitrumtest: #0096FF;
 $color_goerli: #5197EB;
 $color_ropsten: #EC598D;
 
