--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -195,6 +195,11 @@
       background-image: url(/compound-components/assets/icn-tally.svg);
       margin: 0;
     }
+    
+    &--brave-wallet {
+      background-image: url(/compound-components/assets/icn-brave-wallet.svg);
+      margin: 0;
+    }
 
     &--wallet-connect {
       background-image: url(/compound-components/assets/icn-wallet-connect.svg);
