Add rel urls for SCSS

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -30,96 +30,96 @@
   }
 
   &--AAVE {
-    background-image: url('/compound-components/assets/asset_AAVE.svg');
+    background-image: url('../../public/assets/asset_AAVE.svg');
   }
 
   &--BAT {
-    background-image: url('/compound-components/assets/asset_BAT.svg');
+    background-image: url('../../public/assets/asset_BAT.svg');
   }
 
   &--CASH {
-    background-image: url('/compound-components/assets/asset_CASH--green.svg');
+    background-image: url('../../public/assets/asset_CASH--green.svg');
 
     &--dark {
-      background-image: url('/compound-components/assets/asset_CASH--white.svg');
+      background-image: url('../../public/assets/asset_CASH--white.svg');
     }
   }
 
   &--COMP {
-    background-image: url('/compound-components/assets/asset_COMP.svg');
+    background-image: url('../../public/assets/asset_COMP.svg');
   }
 
   &--DAI {
-    background-image: url('/compound-components/assets/asset_DAI.svg');
+    background-image: url('../../public/assets/asset_DAI.svg');
   }
 
   &--ETH,
   &--WETH {
-    background-image: url('/compound-components/assets/asset_ETH.svg');
+    background-image: url('../../public/assets/asset_ETH.svg');
   }
 
   &--LINK {
-    background-image: url('/compound-components/assets/asset_LINK.svg');
+    background-image: url('../../public/assets/asset_LINK.svg');
   }
 
   &--MKR {
-    background-image: url('/compound-components/assets/asset_MKR.svg');
+    background-image: url('../../public/assets/asset_MKR.svg');
   }
 
   &--REP {
-    background-image: url('/compound-components/assets/asset_REP.svg');
+    background-image: url('../../public/assets/asset_REP.svg');
   }
 
   &--SAI {
-    background-image: url('/compound-components/assets/asset_SAI.svg');
+    background-image: url('../../public/assets/asset_SAI.svg');
   }
 
   &--SUSHI {
-    background-image: url('/compound-components/assets/asset_SUSHI.svg');
+    background-image: url('../../public/assets/asset_SUSHI.svg');
   }
 
   &--TUSD {
-    background-image: url('/compound-components/assets/asset_TUSD.svg');
+    background-image: url('../../public/assets/asset_TUSD.svg');
   }
 
   &--UNI {
-    background-image: url('/compound-components/assets/asset_UNI.svg');
+    background-image: url('../../public/assets/asset_UNI.svg');
   }
 
   &--USDC {
-    background-image: url('/compound-components/assets/asset_USDC.svg');
+    background-image: url('../../public/assets/asset_USDC.svg');
   }
 
   &--USDP {
-    background-image: url('/compound-components/assets/asset_USDP.svg');
+    background-image: url('../../public/assets/asset_USDP.svg');
   }
 
   &--USDT {
-    background-image: url('/compound-components/assets/asset_USDT.svg');
+    background-image: url('../../public/assets/asset_USDT.svg');
   }
 
   &--WBTC,
   &--WBTC2 {
-    background-image: url('/compound-components/assets/asset_BTC.svg');
+    background-image: url('../../public/assets/asset_BTC.svg');
   }
 
   &--YFI {
-    background-image: url('/compound-components/assets/asset_YFI.svg');
+    background-image: url('../../public/assets/asset_YFI.svg');
   }
 
   &--ZRX {
-    background-image: url('/compound-components/assets/asset_ZRX.svg');
+    background-image: url('../../public/assets/asset_ZRX.svg');
   }
 
   &--coinbase {
-    background-image: url('/compound-components/assets/icn-coinbase-wallet.svg');
+    background-image: url('../../public/assets/icn-coinbase-wallet.svg');
   }
 
   &--ledger {
-    background-image: url('/compound-components/assets/icn-ledger.svg');
+    background-image: url('../../public/assets/icn-ledger.svg');
   }
 
   &--metamask {
-    background-image: url('/compound-components/assets/icn-metamask.svg');
+    background-image: url('../../public/assets/icn-metamask.svg');
   }
 }
