--- a/src/scss/components/_input-action-panel.scss
+++ b/src/scss/components/_input-action-panel.scss
@@ -150,7 +150,7 @@
           color: $color_supply;
         }
         .line-icon {
-          background-image: url('/compound-components/assets/icn-external-link-green.svg');
+          background-image: url('../../public/assets/icn-external-link-green.svg');
         }
       }
     }
