--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -68,7 +68,7 @@
         left: $column-gutter;
         button {
           background-color: transparent;
-          background-image: url('../../public/assets/icn-arrow-back-dark.svg');
+          background-image: url('../../assets/icn-arrow-back-dark.svg');
           background-size: 100% 100%;
           border: 0;
           padding: 0.5rem 1rem;
@@ -99,7 +99,7 @@
         }
         button {
           background-color: transparent;
-          background-image: url('../../public/assets/icon_close_x.svg');
+          background-image: url('../../assets/icon_close_x.svg');
           background-size: 100% 100%;
           border: 0;
           padding: 0.5rem 1rem;
